--- a/main.css
+++ b/main.css
@@ -63,6 +63,33 @@ article{
   margin-right:auto;
   margin-bottom:10px;
 }
+.tour{
+  display:block;
+  width:85%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:10px;
+}
+table{
+  width:auto;
+}
+table tr{
+  width: 30%;
+}
+table th{
+  font-family:'Oswald', sans-serif;
+  text-transform:uppercase;
+  text-align:center;
+  color:black;
+  background-color:white;
+  font-size:36px;
+}
+table td{
+  font-family:'Oswald', sans-serif;
+  color:white;
+  font-size: 24px;
+  text-align:left;
+}
 p{
   font-family:'Merriweather', serif;
   color:white;
