--- a/main.css
+++ b/main.css
@@ -4,11 +4,14 @@ body{
 .bold-button{
   border:5px solid white;
   font-family:'Oswald', sans-serif;
+  display:inline-block;
   font-weight:bold;
   text-transform: uppercase;
   background:none;
   color:white;
   padding:0px 6px;
+  margin-top:5px;
+  margin-bottom:5px;
 }
 .bold-button:hover{
   color:black;
@@ -18,6 +21,7 @@ body{
 nav{
   display:block;
   text-align:right;
+  margin:0 12px;
 }
 nav a{
   font-size:30px;
@@ -33,14 +37,14 @@ nav button a i:hover{
 }
 h1{
   font-family:'Oswald', sans-serif;
-  color:white;
+  color:black;
+  background-color:white;
   text-transform:uppercase;
-  border:5px solid white;
   width:fit-content;
-  padding:5px;
+  padding:10px;
   margin-left:auto;
   margin-right:auto;
-  margin-bottom:5px;
+  margin-bottom:10px;
 }
 h2{
   font-family:'Oswald', sans-serif;
@@ -59,30 +63,42 @@ article{
 }
 .tour{
   display:block;
-  width:85%;
+  width:69%;
+  align:center;
   margin-left:auto;
   margin-right:auto;
   margin-bottom:10px;
 }
 table{
-  width:auto;
+  width:100%;
+  border-collapse:collapse;
 }
-table tr{
-  width: 30%;
-}
-table th{
+th{
   font-family:'Oswald', sans-serif;
   text-transform:uppercase;
   text-align:center;
   color:black;
   background-color:white;
-  font-size:125%;
+  font-size:30px;
+  margin-left:100px;
+  margin-right:100px;
+  width: 33%;
 }
-table td{
+tr{
+  border: solid;
+  border-width: 1px 0;
+  border-color:white;
+}
+td{
   font-family:'Oswald', sans-serif;
   color:white;
-  font-size: 24px
-  text-align:left;
+  font-size: 24px;
+  text-align:center;
+  padding: 10px 0px;
+}
+td a{
+  align: center;
+  margin:auto;
 }
 p{
   font-family:'Merriweather', serif;
