--- a/test.css
+++ b/test.css
@@ -1,100 +1,41 @@
-body{
-  background-color:black;
-}
-.bold-button{
-  border:5px solid white;
-  font-family:'Oswald', sans-serif;
-  font-weight:bold;
-  text-transform: uppercase;
-  background:none;
-  color:white;
-  padding:0px 6px;
-}
-.bold-button:hover{
-  color:black;
-  text-decoration:none;
-  background:white;
-}
-nav{
-  display:block;
-  text-align:right;
-}
-nav a{
-  font-size:30px;
-  color:white;
-  text-decoration:none;
-  background:none;
-}
-nav button i{
-  padding:2px;
-}
-nav button a i:hover{
-  color:black!important;
-}
 h1{
   font-family:'Oswald', sans-serif;
-  color:white;
   text-transform:uppercase;
-  border:5px solid white;
-  width:fit-content;
-  padding:5px;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:5px;
+  font-size: 5rem;
+  font-weight: 700;
+  margin: 0;
 }
 h2{
   font-family:'Oswald', sans-serif;
   text-decoration:underline;
-  color:white;
   width:fit-content;
-}
-article{
-  display:block;
-  padding:0px 25px;
-  border:5px solid white;
-  width:85%;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:10px;
-}
-.tour{
-  display:block;
-  width:85%;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:10px;
-}
-table{
-  width:auto;
-}
-table tr{
-  width: 30%;
-}
-table th{
-  font-family:'Oswald', sans-serif;
-  text-transform:uppercase;
-  text-align:center;
-  color:black;
-  background-color:white;
-  font-size:125%;
-}
-table td{
-  font-family:'Oswald', sans-serif;
-  color:white;
-  font-size: 24px
-  text-align:left;
 }
 p{
   font-family:'Merriweather', serif;
-  color:white;
 }
-.news{
-  padding:5px 25px;
+a:hover {
+  opacity: 0.7;
+}
+.block {
+  width: 30%;
+  display: inline-block;
+  height: 500px;
+  margin: 2rem 1rem;
+}
+.block-1 {
+  background-color: #ee4035;
+}
+.block-2 {
+  background-color: #fdf498;
+}
+.block-3 {
+  background-color: #0392cf;
+}
+#blocks {
+text-align: center;
 }
 footer p{
   text-align:center;
   font-family:'Oswald', sans-serif;
-  color:white;
   text-transform:uppercase;
-  color:white;
 }
