--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,3 +27,14 @@ a.nav-item.nav-link:hover {
 .service-logo:hover {
     opacity: 0.5;
 }
+.fa {
+    color: white;
+    font-size: 30px;
+    margin: 0 .25em;
+}
+.fa:hover {
+    text-decoration: none;
+    opacity: .5;
+    color: white;
+}
+
