Changes up what's full width, sizing/spacing/text orientation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
 }
 #hero-row {
     background: rgba(0, 0, 0, 0.5);
+    padding-bottom: 3em;
 }
 a.nav-item.nav-link {
     font-size: 1.25em;
